src/parser.cpp
/*
*  src/parser.cpp
*
*  Copyright (C) 2019  Pritam Zope
*/
/*
* Contains Recursive Descent Parser for xlang
* it generates an Abstract Syntax Tree(AST) defined in tree.hpp file
*/

#include <iostream>
#include <fstream>
#include <vector>
#include <map>
#include <algorithm>
#include <cstdarg>
#include <cassert>
#include "token.hpp"
#include "types.hpp"
#include "print.hpp"
#include "error.hpp"
#include "lex.hpp"
#include "tree.hpp"
#include "parser.hpp"
#include "symtab.hpp"

using namespace xlang;

namespace xlang
{
  //symbol table for globally defined identifiers
  struct xlang::st_node *global_symtab;
  //global record table
  struct xlang::st_record_symtab *record_table;
  //function declaration table
  std::map<std::string, struct st_func_info*> func_table;
}

xlang::parser::parser()
{
  //token_lexeme_table used for string of special symbols
  this->token_lexeme_table = {
      {PTR_OP, "*"},
      {LOG_NOT, "!"},
      {ADDROF_OP, "&"},
      {ARROW_OP, "->"},
      {DOT_OP, "."},
      {COMMA_OP, ","},
      {COLON_OP, ":"},
      {CURLY_OPEN_BRACKET, "{"},
      {CURLY_CLOSE_BRACKET, "}"},
      {PARENTH_OPEN, "("},
      {PARENTH_CLOSE, ")"},
      {SQUARE_OPEN_BRACKET, "["},
      {SQUARE_CLOSE_BRACKET, "]"},
      {SEMICOLON, ";"}
  };

  //allocate memory to global symbol table and record table
  xlang::global_symtab = xlang::symtable::get_node_mem();
  xlang::record_table = xlang::symtable::get_record_symtab_mem();

  consumed_terminator.token = NONE;
  consumed_terminator.lexeme = "";
  nulltoken.token = NONE;
  nulltoken.lexeme = "";

}

//overload << operator to print list/vector of tokens
//for displaying expressions on error
std::ostream& operator<<(std::ostream& ostm, const std::vector<token>& v)
{
  for(auto x : v)
    ostm<<x.lexeme;
  return ostm;
}

std::ostream& operator<<(std::ostream& ostm, const std::list<token>& lst)
{
  for(auto x : lst)
    ostm<<x.lexeme;
  return ostm;
}

//get token from lexer and match it with tk
//and return token again to lex
bool xlang::parser::peek_token(token_t tk)
{
  token tok = lex->get_next_token();
  if(tok.token == tk){
    lex->unget_token(tok);
    return true;
  }
  lex->unget_token(tok);
  return false;
}

//same as above function just match with a vector of tokens
bool xlang::parser::peek_token(std::vector<token_t>& tkv)
{
  token tok = lex->get_next_token();
  std::vector<token_t>::iterator it = tkv.begin();
  while(it != tkv.end()){
    if(tok.token == *it){
      lex->unget_token(tok);
      return true;
    }
    it++;
  }
  lex->unget_token(tok);
  return false;
}

//peek token with variable number of provided tokens
bool xlang::parser::peek_token(const char *format...)
{
  va_list args;
  va_start(args, format);
  token tok = lex->get_next_token();

  while (*format != '\0') {
    if (*format == 'd') {
      if(va_arg(args, int) == tok.token){
        lex->unget_token(tok);
        return true;
      }
    }
    ++format;
  }

  va_end(args);
  lex->unget_token(tok);
  return false;
}

bool xlang::parser::peek_nth_token(token_t tk, int n)
{
  token *tok = new token[n];
  token_t tk2;
  int i;
  for(i=0; i<n; i++){
    tok[i] = lex->get_next_token();
  }

  tk2 = tok[n-1].token;

  for(i=n-1; i>=0; i--){
    lex->unget_token(tok[i]);
  }

  delete[] tok;

  return (tk == tk2);
}

token_t xlang::parser::get_peek_token()
{
  token tok = lex->get_next_token();
  token_t tk = tok.token;
  lex->unget_token(tok);
  return tk;
}

token_t xlang::parser::get_nth_token(int n)
{
  token *tok = new token[n];
  token_t tk;
  int i;
  for(i=0; i<n; i++){
    tok[i] = lex->get_next_token();
  }

  tk = tok[n-1].token;

  for(i=n-1; i>=0; i--){
    lex->unget_token(tok[i]);
  }

  delete[] tok;

  return tk;
}

//expression literal
bool xlang::parser::expr_literal(token_t tkt)
{
  return (tkt == LIT_DECIMAL || tkt == LIT_OCTAL
          || tkt == LIT_HEX || tkt == LIT_BIN
          || tkt == LIT_FLOAT || tkt == LIT_CHAR);

}


bool xlang::parser::peek_expr_literal_token()
{
  token tok = lex->get_next_token();
  token_t tkt = tok.token;
  lex->unget_token(tok);
  return (expr_literal(tkt));

}

//get token from lexer
//if it is not matched with the provided token then display error
bool xlang::parser::expect_token(token_t tk)
{
  token tok = lex->get_next_token();

  if(tok.token != tk){
    std::map<token_t, std::string>::iterator find_it = token_lexeme_table.find(tk);
    if(find_it != token_lexeme_table.end()){
      std::list<token>::iterator it = std::prev(expr_list.end());
      loc_t loc;
      if(!expr_list.empty()){
        loc = (*it).loc;
      }
      xlang::error::print_error(xlang::filename, "expected ", find_it->second, loc);
      std::cout<<expr_list<<std::endl;

      return false;
    }
  }
  lex->unget_token(tok);
  return true;
}

//same as above just to determine whether to consume token or return it to lexer
bool xlang::parser::expect_token(token_t tk, bool consume_token)
{
  token tok = lex->get_next_token();
  if(tok.token == END_OF_FILE)
    return false;

  if(tok.token != tk){
    std::map<token_t, std::string>::iterator find_it = token_lexeme_table.find(tk);
    if(find_it != token_lexeme_table.end()){
      std::list<token>::iterator it = std::prev(expr_list.end());
      loc_t loc;
      if(!expr_list.empty()){
        loc = (*it).loc;
      }
      if(tok.token != END_OF_FILE && expr_list.empty()){
        loc = tok.loc;
      }else{
        loc.line = 0;
        loc.col = 0;
      }
      xlang::error::print_error(xlang::filename, "expected ", find_it->second,
                          " but found "+s_quotestring(tok.lexeme), loc);
      std::cout<<expr_list<<std::endl;

      return false;
    }
  }

  if(!consume_token)
    lex->unget_token(tok);
  return true;
}

bool xlang::parser::expect_token(token_t tk, bool consume_token, std::string str)
{
  token tok = lex->get_next_token();

  if(tok.token != tk){
    xlang::error::print_error(xlang::filename, "expected ", str, tok.loc);
    std::cout<<expr_list<<std::endl;

    return false;
  }
  if(!consume_token)
    lex->unget_token(tok);
  return true;
}

bool xlang::parser::expect_token(token_t tk, bool consume_token,
                                std::string str, std::string arg)
{
  token tok = lex->get_next_token();

  if(tok.token != tk){
    xlang::error::print_error(xlang::filename, "expected ", str, arg, tok.loc);
    std::cout<<expr_list<<std::endl;

    return false;
  }
  if(!consume_token)
    lex->unget_token(tok);
  return true;
}

bool xlang::parser::expect_token(const char *format...)
{
  va_list args;
  va_start(args, format);
  token tok = lex->get_next_token();

  while (*format != '\0') {
    if (*format == 'd') {
      if(va_arg(args, int) == tok.token){
        lex->unget_token(tok);
        return true;
      }
    }
    ++format;
  }

  va_end(args);

  error::print_error(xlang::filename, "expected ", tok.loc);

  return false;
}

void xlang::parser::consume_next_token()
{
  lex->get_next_token();
}

void xlang::parser::consume_n_tokens(int n)
{
  while(n > 0){
    lex->get_next_token();
    n--;
  }
}

void xlang::parser::consume_tokens_till(terminator_t& terminator)
{
  token tok;
  std::sort(terminator.begin(), terminator.end());
  while((tok = lex->get_next_token()).token != END_OF_FILE){
    if(std::binary_search(terminator.begin(), terminator.end(), tok.token))
      break;
  }
  lex->unget_token(tok);
}

//used in primary expression for () checking using stack
bool xlang::parser::check_parenth()
{
  if(parenth_stack.size() > 0){
    parenth_stack.pop();
    return true;
  }
  return false;
}

//matches with the terminator vector
//terminator is the vector of tokens which is used for expression terminator
bool xlang::parser::match_with_terminator(terminator_t& tkv, token_t tk)
{
  for(auto x : tkv){
    if(x == tk)
      return true;
  }
  return false;
}

std::string xlang::parser::get_terminator_string(terminator_t& terminator)
{
  std::string st;
  size_t i;
  std::map<token_t, std::string>::iterator find_it;
  for(i=0; i<terminator.size();i++){
    find_it = token_lexeme_table.find(terminator[i]);
    if(find_it != token_lexeme_table.end())
      st = st + find_it->second + " ";
  }
  return st;
}

/*
unary-operator : one of
  + - ! ~
*/
bool xlang::parser::unary_operator(token_t tk)
{
  return (tk == ARTHM_ADD || tk == ARTHM_SUB
          || tk == LOG_NOT || tk == BIT_COMPL);
}


bool xlang::parser::peek_unary_operator()
{
  token tok = lex->get_next_token();
  token_t tk = tok.token;
  lex->unget_token(tok);
  return unary_operator(tk);

}

/*
binary-operator :
  arithmetic-operator
  logical-operator
  comparison-operator
  bitwise-operator
*/
bool xlang::parser::binary_operator(token_t tk)
{
  return (arithmetic_operator(tk) ||
          logical_operator(tk)    ||
          comparison_operator(tk) ||
          bitwise_operator(tk));
}

/*
arithmetic-operator : one of
  + - * / %
*/
bool xlang::parser::arithmetic_operator(token_t tk)
{
  return (tk == ARTHM_ADD || tk == ARTHM_SUB
          || tk == ARTHM_MUL || tk == ARTHM_DIV
          || tk == ARTHM_MOD);
}

/*
logical-operator : one of
  && ||
*/
bool xlang::parser::logical_operator(token_t tk)
{
  return (tk == LOG_AND || tk == LOG_OR);
}

/*
comparison-operator : one of
  < <= > >= == !=
*/
bool xlang::parser::comparison_operator(token_t tk)
{
  return (tk == COMP_LESS || tk == COMP_LESS_EQ
          || tk == COMP_GREAT || tk == COMP_GREAT_EQ
          || tk == COMP_EQ || tk == COMP_NOT_EQ);
}

/*
bitwise-operator : one of
  | & ^ << >> bit_and bit_or bit_xor
*/
bool xlang::parser::bitwise_operator(token_t tk)
{
  return (tk == BIT_OR || tk == BIT_AND
          || tk == BIT_EXOR || tk == BIT_LSHIFT
          || tk == BIT_RSHIFT);
}

/*
assignment-operator : one of
  = += -= *= /= %= |= &= ^= <<= >>=
*/
bool xlang::parser::assignment_operator(token_t tk)
{
  return (tk == ASSGN || tk == ASSGN_ADD
          || tk == ASSGN_SUB || tk == ASSGN_MUL
          || tk == ASSGN_DIV || tk == ASSGN_MOD
          || tk == ASSGN_BIT_OR || tk == ASSGN_BIT_AND
          || tk == ASSGN_BIT_EX_OR || tk == ASSGN_LSHIFT
          || tk == ASSGN_RSHIFT);
}

bool xlang::parser::peek_binary_operator()
{
  token tok = lex->get_next_token();
  token_t tk = tok.token;
  lex->unget_token(tok);
  return binary_operator(tk);

}

bool xlang::parser::peek_literal()
{
  token_t tk = get_peek_token();
  return (tk == LIT_DECIMAL || tk == LIT_OCTAL
          || tk == LIT_HEX || tk == LIT_BIN
          || tk == LIT_FLOAT || tk == LIT_CHAR);

}

bool xlang::parser::peek_literal_with_string()
{
  token_t tk = get_peek_token();
  return (tk == LIT_DECIMAL || tk == LIT_OCTAL
          || tk == LIT_HEX || tk == LIT_BIN
          || tk == LIT_FLOAT || tk == LIT_CHAR
          || tk == LIT_STRING);

}

bool xlang::parser::integer_literal(token_t tk)
{
  return (tk == LIT_DECIMAL || tk == LIT_OCTAL
          || tk == LIT_HEX || tk == LIT_BIN);
}

bool xlang::parser::character_literal(token_t tk)
{
  return (tk == LIT_CHAR);
}

bool xlang::parser::constant_expression(token_t tk)
{
  return (integer_literal(tk) || character_literal(tk));
}

bool xlang::parser::peek_constant_expression()
{
  return constant_expression(get_peek_token());
}

bool xlang::parser::peek_assignment_operator()
{
  token_t tk = get_peek_token();
  return assignment_operator(tk);
}

bool xlang::parser::peek_identifier()
{
  return (get_peek_token() == IDENTIFIER);
}

bool xlang::parser::expect_binary_opertr_token()
{
  return (expect_token("dddddddddddddddddddd",
                      ARTHM_ADD, ARTHM_SUB,
                      ARTHM_MUL, ARTHM_DIV,
                      ARTHM_MOD, LOG_AND,
                      LOG_OR, COMP_LESS,
                      COMP_LESS_EQ, COMP_GREAT,
                      COMP_GREAT_EQ, COMP_EQ,
                      COMP_NOT_EQ, BIT_AND,
                      BIT_OR, BIT_EXOR,
                      BIT_LSHIFT, BIT_RSHIFT));
}

bool xlang::parser::expect_literal()
{
  return (expect_token("ddddddddd",
                        LIT_DECIMAL, LIT_OCTAL,
                        LIT_HEX, LIT_BIN,
                        LIT_FLOAT, LIT_CHAR));
}

bool xlang::parser::expect_assignment_operator()
{
  return (expect_token("ddddddddddd",
                      ASSGN, ASSGN_ADD,
                      ASSGN_SUB, ASSGN_MUL,
                      ASSGN_DIV, ASSGN_MOD,
                      ASSGN_BIT_OR, ASSGN_BIT_AND,
                      ASSGN_BIT_EX_OR, ASSGN_LSHIFT,
                      ASSGN_RSHIFT));
}

bool xlang::parser::member_access_operator(token_t tk)
{
  return (tk == DOT_OP || tk == ARROW_OP);
}

bool xlang::parser::peek_member_access_operator()
{
  token_t tk = get_peek_token();
  return member_access_operator(tk);
}

bool xlang::parser::expression_token(token_t tk)
{
  return (tk == LIT_DECIMAL || tk == LIT_OCTAL
          || tk == LIT_HEX || tk == LIT_BIN
          || tk == LIT_FLOAT || tk == LIT_CHAR
          || tk == ARTHM_ADD || tk == ARTHM_SUB
          || tk == LOG_NOT || tk == BIT_COMPL
          || tk == IDENTIFIER || tk == PARENTH_OPEN
          || tk == ARTHM_MUL || tk == INCR_OP
          || tk == DECR_OP || tk == BIT_AND
          || tk == KEY_SIZEOF);
}

bool xlang::parser::peek_expression_token()
{
  return expression_token(get_peek_token());
}

/*
type-specifier :
  simple-type-specifier
  record-name

simple-type-specifier :
  void
  char
  double
  float
  int
  short
  long
*/
bool xlang::parser::peek_type_specifier(std::vector<token>& tokens)
{
  token tok;
  //get the token from lexer
  tok = lex->get_next_token();
  if(tok.token == KEY_VOID || tok.token == KEY_CHAR
    || tok.token == KEY_DOUBLE || tok.token == KEY_FLOAT
    || tok.token == KEY_INT || tok.token == KEY_SHORT
    || tok.token == KEY_LONG || tok.token == IDENTIFIER){

      tokens.push_back(tok);
      lex->unget_token(tok);
      return true;

    }else{
      lex->unget_token(tok);
    }
  return false;
}


bool xlang::parser::type_specifier(token_t tk)
{
  return (tk == KEY_CHAR || tk == KEY_DOUBLE
          || tk == KEY_FLOAT || tk == KEY_INT
          || tk == KEY_SHORT || tk == KEY_LONG
          || tk == KEY_VOID);
}


bool xlang::parser::peek_type_specifier()
{
  token_t tk = get_peek_token();
  return type_specifier(tk);
}

void xlang::parser::get_type_specifier(std::vector<token>& types)
{
  if(peek_type_specifier(types))
    return;
  else
    types.clear();
}

bool xlang::parser::peek_type_specifier_from(int n)
{
  token *tok = new token[n];
  token_t tk;
  int i;
  for(i=0; i<n; i++){
    tok[i] = lex->get_next_token();
  }

  tk = tok[n - 1].token;

  for(i=n-1; i>=0; i--){
    lex->unget_token(tok[i]);
  }

  delete[] tok;

  return (type_specifier(tk));
}

/*
primary-expression :
  literal
  identifier
  ( primary-expression )
  ( primary-expression ) primary-expression
  unary-operator primary-expression
  literal binary-operator primary-expression
  id-expression binary-operator primary-expression
  sub-primary-expression
*/
/*
infix expressions are hard to parse so there is the possibility
that it sometimes may discard some valid expressions.
also some unary operators are not handled at the final parsing state.
some are hardcoded for expecting the tokens because of recursion.
*/
void xlang::parser::primary_expression(terminator_t& terminator)
{
  terminator_t terminator2;
  token tok = lex->get_next_token();

  //check if token is terminator or not
  if(match_with_terminator(terminator, tok.token)){
    expr_list.push_back(tok);
    return;
  }

  switch(tok.token){
    case PARENTH_OPEN :
      {
        //push open parentheses in expression list and in stack
        expr_list.push_back(tok);
        parenth_stack.push(tok);

        //check for closed parenthesis
        if(peek_token(PARENTH_CLOSE)){
          token tok2 = lex->get_next_token();
          error::print_error(xlang::filename, "expression expected ",
                              tok2.lexeme, tok2.loc);
          return;
        }

        //call same function as per the grammar
        primary_expression(terminator);

        //check for parenthesis and expect token )
        if(parenth_stack.size() > 0 && expect_token(PARENTH_CLOSE)){
          if(!check_parenth()){
            error::print_error(xlang::filename, "unbalanced parenthesis");

          }else{
            token tok2 = lex->get_next_token();
            expr_list.push_back(tok2);
          }

          //peek for binary/unary operator
          if(peek_binary_operator() || peek_unary_operator()){
            sub_primary_expression(terminator);
          }else if(peek_token(terminator)){
            if(check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");
            }
            token tok2 = lex->get_next_token();
            is_expr_terminator_consumed = true;
            consumed_terminator = tok2;
            is_expr_terminator_got = true;
          }else if(peek_token(PARENTH_CLOSE)){
            token tok2 = lex->get_next_token();
            if(!check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis ",
                                  tok2.lexeme, tok2.loc);
            }else{
              expr_list.push_back(tok2);
              primary_expression(terminator);
            }
          }else{
            tok = lex->get_next_token();
            if(!is_expr_terminator_consumed || !is_expr_terminator_got){
              error::print_error(xlang::filename,
                    get_terminator_string(terminator)+"expected", tok.loc);
            }
            if(check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");

            }else{
              if(tok.token == END_OF_FILE)
                return;
              error::print_error(xlang::filename,
                      get_terminator_string(terminator)+"expected but found "+tok.lexeme);
            }
          }
        }
      }
      break;

    case PARENTH_CLOSE :
      {
        if(!check_parenth()){
            error::print_error(xlang::filename, "unbalanced parenthesis");
        }else{
          //push ) on expression list
          expr_list.push_back(tok);

          //peek for binary operator
          if(peek_binary_operator()){
            primary_expression(terminator);
          }else if(peek_token(terminator)){
            is_expr_terminator_got = true;
            token tok2 = lex->get_next_token();
            is_expr_terminator_consumed = true;
            consumed_terminator = tok2;
            return;
          }else if(peek_token(PARENTH_CLOSE)){
            primary_expression(terminator);
          }else{
            error::print_error(xlang::filename,
                    get_terminator_string(terminator)+"expected ");
            std::cout<<expr_list<<std::endl;
            return;
          }
        }
        return;
      }
      break;

    case LIT_DECIMAL :
    case LIT_OCTAL :
    case LIT_HEX :
    case LIT_BIN :
    case LIT_FLOAT :
    case LIT_CHAR :
      {
        //push literal
        expr_list.push_back(tok);
        //expect binary/unary operator
        if(peek_binary_operator() || peek_unary_operator()){
            if(expect_binary_opertr_token()){
              token tok2 = lex->get_next_token();
              expr_list.push_back(tok2);
            }
            //if parethesis/identifier is found
            if(peek_token(PARENTH_OPEN) || peek_token(IDENTIFIER)){
              primary_expression(terminator);
            }else if(peek_expr_literal_token()){
              if(expect_literal()){
                token tok2 = lex->get_next_token();
                expr_list.push_back(tok2);
              }
            }else if(peek_unary_operator()){
              sub_primary_expression(terminator);
            }else{
              token tok2 = lex->get_next_token();
              error::print_error(xlang::filename, "literal or expression expected ",
                                tok2.lexeme, tok2.loc);
              xlang::print::print_white_bold_text(expr_list);
              std::cout<<std::endl;
              return;
            }
            //if binary operator not found then peek for terminator
        }else if(peek_token(terminator)){
            if(check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");
            }else{
              token tok2 = lex->get_next_token();
              //expr_list.push_back(tok2);
              is_expr_terminator_got = true;
              is_expr_terminator_consumed = true;
              consumed_terminator = tok2;
              return;
            }
        }else if(peek_token(PARENTH_CLOSE)){
            primary_expression(terminator);
        }else{
            token tok2 = lex->get_next_token();
            if(!is_expr_terminator_got){
              error::print_error(xlang::filename,
                        get_terminator_string(terminator)+" expected ");
              std::cout<<expr_list<<std::endl;
              lex->unget_token(tok2);
              return;
            }else{

            }
            if(!check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");
              return;
            }
        }

        //peek for terminator or binary operator
        if(peek_token(terminator)){
          token tok2 = lex->get_next_token();
          is_expr_terminator_got = true;
          is_expr_terminator_consumed = true;
          consumed_terminator = tok2;
          return;
        }else if(peek_binary_operator()){
          sub_primary_expression(terminator);
        }else{
          if(peek_token(PARENTH_CLOSE)){
            if(parenth_stack.size()==0){
              token tok2 = lex->get_next_token();
              error::print_error(xlang::filename, "error ",
                                  tok2.lexeme, tok2.loc);
            }
          }else if(peek_token(END_OF_FILE)){
            token tok2 = lex->get_next_token();
            if(check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");
            }
            if(!is_expr_terminator_consumed){
              error::print_error(xlang::filename,
                      get_terminator_string(terminator)+"expected", tok2.loc);
              return;
            }
          }else if(peek_expr_literal_token()){
            token tok2 = lex->get_next_token();
            if(check_parenth()){
              error::print_error(xlang::filename, "unbalanced parenthesis");
            }
            if(!is_expr_terminator_got){
              error::print_error(xlang::filename,
                      get_terminator_string(terminator)+"expected", tok2.loc);
            }
            lex->unget_token(tok2);
          }else{
            if(!is_expr_terminator_consumed){
              error::print_error(xlang::filename,
                      get_terminator_string(terminator)+"expected ");
              std::cout<<expr_list<<std::endl;
              return;
            }
          }
        }
      }
      break;

    case ARTHM_ADD :
    case ARTHM_SUB :
    case ARTHM_MUL :
    case ARTHM_DIV :
    case ARTHM_MOD :
    case LOG_AND :
    case LOG_OR :
    case COMP_LESS :
    case COMP_LESS_EQ :
    case COMP_GREAT :
    case COMP_GREAT_EQ :
    case COMP_EQ :
    case COMP_NOT_EQ :
    case LOG_NOT :
    case BIT_AND :
    case BIT_OR :
    case BIT_EXOR :
    case BIT_LSHIFT :
    case BIT_RSHIFT :
    case BIT_COMPL :
      {
        if(is_expr_terminator_got){
          lex->unget_token(tok);
          return;
        }
        //peek for unary operator
        if(unary_operator(tok.token)){
          expr_list.push_back(tok);
          if(peek_token(PARENTH_OPEN) || peek_expr_literal_token() ||
              peek_binary_operator() || peek_unary_operator() ||
              peek_token(IDENTIFIER)){
            sub_primary_expression(terminator);
          //if increment operator ++
          }else if(peek_token(INCR_OP)){
            prefix_incr_expression(terminator);
          //if decrement operator --
          }else if(peek_token(DECR_OP)){
            prefix_decr_expression(terminator);
          }else{
            token tok2 = lex->get_next_token();
            error::print_error(xlang::filename, "expression expected ",
                      tok2.lexeme, tok2.loc);
          }
        }else{
          if(peek_token(PARENTH_OPEN) || peek_expr_literal_token() || peek_token(IDENTIFIER)){
            expr_list.push_back(tok);
            sub_primary_expression(terminator);
          }else{
            token tok2 = lex->get_next_token();
            error::print_error(xlang::filename, "literal expected ",
                              tok2.lexeme, tok2.loc);
            return;
          }
        }
      }
      break;

    case IDENTIFIER :
      {
        //if identifier
        //peek for binary operator otherwise call id_expression() function
        if(peek_binary_operator()){
          expr_list.push_back(tok);
          sub_primary_expression(terminator);
        }else if(peek_token(terminator)){
          expr_list.push_back(tok);
          tok = lex->get_next_token();
          is_expr_terminator_consumed = true;
          consumed_terminator = tok;
          return;
        }else if(peek_token(END_OF_FILE)){
            expr_list.push_back(tok);
            error::print_error(xlang::filename,
                    get_terminator_string(terminator)+"expected", tok.loc);
            return;
        }else{
          lex->unget_token(tok, true);
          if(parenth_stack.size() > 0){
            terminator2.push_back(PARENTH_CLOSE);
            id_expression(terminator2);
          }else{
            id_expression(terminator);
          }
        }
        return;
      }
      break;

    default :
      {
        error::print_error(xlang::filename, "primaryexpr invalid token ",
                            tok.lexeme, tok.loc);
        return;
      }
      break;
  }
}

void xlang::parser::sub_primary_expression(terminator_t& terminator)
{
  if(expr_list.size() > 0)
    primary_expression(terminator);
}
